src/test/input/codegen/fail/return.c
// No return at end of non-void function

int a() {
    
}

void main() {
    
}